Project 0/force-app/main/default/objects/Wishlist__c/fields/Game_Account__c.field-meta.xml
<CustomField>
    <fullName>Game_Account__c</fullName>
    <label>Game Account</label>
    <referenceTo>Game_Account__c</referenceTo>
    <relationshipLabel>Wishlists</relationshipLabel>
    <relationshipName>Wishlists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>