Project 0/force-app/main/default/objects/Wishlist__c/fields/Game_Name__c.field-meta.xml
<CustomField>
    <fullName>Game_Name__c</fullName>
    <formula>Game__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Game Name</label>
    <type>Text</type>
</CustomField>