Project 0/force-app/main/default/objects/Wishlist__c/fields/Publisher__c.field-meta.xml
<CustomField>
    <fullName>Publisher__c</fullName>
    <formula>Game__r.Publisher__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Publisher</label>
    <type>Text</type>
</CustomField>