Project 0/force-app/main/default/objects/Wishlist__c/fields/Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Date__c</fullName>
    <formula>Game__r.Release_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Release Date</label>
    <type>Date</type>
</CustomField>